changed files structure and added groupAnagrams todo